Improve logging and exceptions